<resources>
    <string name="app_name">FalconsCard</string>
    <string name="a_message">I know you had</string>
    <string name="b_message">REALLY high hopes</string>
    <string name="mymessage_a">this past season... but</string>
    <string name="mymessage_b">CHEER UP</string>
    <string name="mymessage_c">because the Falcons will</string>
    <string name="mymessage_d">RISE UP in 2018!</string>
    <string name="app_mymessagez">Atlanta Falcons Background</string>

</resources>
