<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.falconscard.MainActivity">

    <ImageView
        android:id="@+id/falcons_pic"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        android:src="@drawable/pic8a"
        android:contentDescription="@string/app_mymessagez" />

    <TextView
        android:id="@+id/partone_txt"
        style="@style/TextViewTop"
        android:layout_alignParentTop="true"
        android:text="@string/a_message" />

    <TextView
        android:id="@+id/partone_atxt"
        style="@style/TextViewLarge"
        android:layout_below="@id/partone_txt"
        android:text="@string/b_message" />

    <TextView
        android:id="@+id/parttwo_txt"
        style="@style/TextViewSmall_right"
        android:layout_below="@id/partone_atxt"
        android:text="@string/mymessage_a" />

    <TextView
        android:id="@+id/partfive_txt"
        style="@style/TextViewLarge1"
        android:layout_below="@id/parttwo_txt"
        android:text="@string/mymessage_b" />

    <TextView
        android:id="@+id/partsix_txt"
        style="@style/TextViewSmall"
        android:layout_below="@id/partfive_txt"
        android:text="@string/mymessage_c" />

    <TextView
        android:id="@+id/partf_txt"
        style="@style/TextViewLarge2"
        android:layout_below="@id/partsix_txt"
        android:text="@string/mymessage_d"/>

</RelativeLayout>
